[project]
name = "spotifyclaude"
version = "0.1.0"
description = "A mcp project for spotify"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.26.0", "httpx>=0.28.0",]
[[project.authors]]
name = "cianmccarthy"
email = "122426882@UMAIL.UCC.IE"

[build-system]
requires = [ "uv_build>=0.10.11,<0.11.0",]
build-backend = "uv_build"

[project.scripts]
spotifyclaude = "spotifyclaude:main"
